--- a/src/App.css
+++ b/src/App.css
@@ -120,11 +120,11 @@ h2 {
 }
 
 .order-view {
-  padding: 1rem;
+  padding: 2rem;
+  margin: 1rem;
   background-color: white;
 }
 .cartCard {
   display: flex;
   justify-content: space-between;
-  padding: 1rem
 }
