--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,17 @@ h2 {
   margin-bottom: .25rem;
 }
 
+.start {
+  background-color: #38846D;
+  background-image: url("./assets/bg.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .product-text {
   font-size: .75rem;
   margin-top: .25rem;
